src/objects/NPT_Custom_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This holds values for NPT related thing.</description>
    <fields>
        <fullName>clientId__c</fullName>
        <description>It holds clientId for NPT</description>
        <encryptionScheme>None</encryptionScheme>
        <label>clientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecreat__c</fullName>
        <description>It holds clientSecreat</description>
        <encryptionScheme>None</encryptionScheme>
        <label>clientSecreat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resource__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>setEndpointJsonStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>setEndpointJsonStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>setEndpointURL__c</fullName>
        <description>It will set end point url for NPT</description>
        <encryptionScheme>None</encryptionScheme>
        <label>setEndpointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NPT_Custom_Setting</label>
</CustomObject>